--- a/pages/16466.html
+++ b/pages/16466.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/6530/#Item_53" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/6530/#Item_56" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -830,7 +830,30 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#relevance">Relevance</a><ul><li><a href="#RelevanceForSupersymmetry">For supersymmetry</a></li><li><a href="#RelevanceForHopfAlgebras">For Tannaka duality of Hopf algebras</a></li></ul></li><li><a href="#background">Background</a><ul><li><a href="#TensorProductsAndMonoidalCategories">Tensor products and Super vector spaces</a></li><li><a href="#CommutativeAlgebraInTensorCategories">Commutative algebra in tensor categories and Affine super-spaces</a></li><li><a href="#ModulesInTensorCategories">Modules in tensor categories and Super vector bundles</a></li><li><a href="#GroupsAsHopfAlgebras">Super-Groups as super-commutative Hopf algebras</a></li><li><a href="#LinearRepresentationsAsComodules">Linear super-representations as Comodules</a></li><li><a href="#FiberFunctors">Super Fiber functors and their automorphism supergroups</a></li><li><a href="#superexterior_powers_and_schur_functors">Super-exterior powers and Schur functors</a></li></ul></li><li><a href="#Statement">Statement of the theorem</a></li><li><a href="#proof_13">Proof</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#relevance'>Relevance</a></li>
+<ul>
+<li><a href='#RelevanceForSupersymmetry'>For supersymmetry</a></li>
+<li><a href='#RelevanceForHopfAlgebras'>For Tannaka duality of Hopf algebras</a></li>
+</ul>
+<li><a href='#background'>Background</a></li>
+<ul>
+<li><a href='#TensorProductsAndMonoidalCategories'>Tensor products and Super vector spaces</a></li>
+<li><a href='#CommutativeAlgebraInTensorCategories'>Commutative algebra in tensor categories and Affine super-spaces</a></li>
+<li><a href='#ModulesInTensorCategories'>Modules in tensor categories and Super vector bundles</a></li>
+<li><a href='#GroupsAsHopfAlgebras'>Super-Groups as super-commutative Hopf algebras</a></li>
+<li><a href='#LinearRepresentationsAsComodules'>Linear super-representations as Comodules</a></li>
+<li><a href='#FiberFunctors'>Super Fiber functors and their automorphism supergroups</a></li>
+<li><a href='#superexterior_powers_and_schur_functors'>Super-exterior powers and Schur functors</a></li>
+</ul>
+<li><a href='#Statement'>Statement of the theorem</a></li>
+<li><a href='#proof_13'>Proof</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>Deligne’s theorem on tensor categories (<a href="#Deligne02">Deligne 02</a>, recalled as theorem <a class="maruku-ref" href="#TheTheorem"></a> below) establishes <a class="existingWikiWord" href="/nlab/show/Tannaka+duality">Tannaka duality</a> between linear <a class="existingWikiWord" href="/nlab/show/tensor+categories">tensor categories</a> in <a class="existingWikiWord" href="/nlab/show/characteristic+zero">characteristic zero</a> subject to just a mild size constraint (subexponential growth, def. <a class="maruku-ref" href="#SubexponentialGrowth"></a> below), and <a class="existingWikiWord" href="/nlab/show/supergroups">supergroups</a> (“<a class="existingWikiWord" href="/nlab/show/supersymmetries">supersymmetries</a>”), realizing these tensor categories as <a class="existingWikiWord" href="/nlab/show/categories+of+representations">categories of representations</a> of these supergroups.</p>
@@ -1488,23 +1511,30 @@ r \;\colon\; (-) \otimes 1 \overset{\simeq}{\longrightarrow} (-)
 
 <p>Accordingly any <a class="existingWikiWord" href="/nlab/show/braiding">braiding</a> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>𝒞</mi><mo>,</mo><mo>⊗</mo><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(\mathcal{C}, \otimes,1)</annotation></semantics></math> restricts to a braiding on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>Line</mi><mo stretchy="false">(</mo><mi>𝒞</mi><mo stretchy="false">)</mo><mo>,</mo><mo>⊗</mo><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(Line(\mathcal{C}), \otimes, 1)</annotation></semantics></math>. Hence it is sufficient to show that there is an essentially unique non-trivial symmetric braiding on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>Line</mi><mo stretchy="false">(</mo><mi>𝒞</mi><mo stretchy="false">)</mo><mo>,</mo><mo>⊗</mo><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(Line(\mathcal{C}), \otimes, 1)</annotation></semantics></math>, and that this is the restriction of a braiding on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>𝒞</mi><mo>,</mo><mo>⊗</mo><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(\mathcal{C}, \otimes, 1)</annotation></semantics></math>.</p>
 
-<p>Now <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>Line</mi><mo stretchy="false">(</mo><mi>𝒞</mi><mo>,</mo><mo>⊗</mo><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(Line(\mathcal{C}, \otimes , 1))</annotation></semantics></math> is necessarily a <a class="existingWikiWord" href="/nlab/show/groupoid">groupoid</a> (the “<a class="existingWikiWord" href="/nlab/show/Picard+groupoid+of+a+monoidal+category">Picard groupoid</a>” of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding="application/x-tex">\mathcal{C}</annotation></semantics></math>) and in fact is what is called a <em><a class="existingWikiWord" href="/nlab/show/2-group">2-group</a></em>. As such we may regard it equivalently as a <a class="existingWikiWord" href="/nlab/show/homotopy+1-type">homotopy 1-type</a> with group structure, and as such it it is equivalent to its <a class="existingWikiWord" href="/nlab/show/delooping">delooping</a></p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>B</mi> <mo>⊗</mo></msub><mi>Line</mi><mo stretchy="false">(</mo><mi>𝒞</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
-  B_\otimes Line(\mathcal{C})
+<p>Consider furthermore the <a class="existingWikiWord" href="/nlab/show/groupoid">groupoid</a> <a class="existingWikiWord" href="/nlab/show/core">core</a> (non-<a class="existingWikiWord" href="/nlab/show/full+subcategory">full</a> <a class="existingWikiWord" href="/nlab/show/subcategory">subcategory</a> including all the <a class="existingWikiWord" href="/nlab/show/isomorphisms">isomorphisms</a>)</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Line</mi><mo stretchy="false">(</mo><mi>𝒞</mi><mo>,</mo><mo>⊗</mo><mo>,</mo><mn>1</mn><msub><mo stretchy="false">)</mo> <mi>iso</mi></msub><mspace width="thickmathspace"></mspace><mo>∈</mo><mspace width="thickmathspace"></mspace><mn>2</mn><mi>Grp</mi></mrow><annotation encoding="application/x-tex">
+  Line(\mathcal{C}, \otimes , 1)_{iso}
+  \;\in\;
+  2 Grp
+
+</annotation></semantics></math></div>
+<p>The <a class="existingWikiWord" href="/nlab/show/tensor+product">tensor product</a> now makes this a <em><a class="existingWikiWord" href="/nlab/show/2-group">2-group</a></em>, known as the “<a class="existingWikiWord" href="/nlab/show/Picard+groupoid+of+a+monoidal+category">Picard groupoid</a>” of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding="application/x-tex">\mathcal{C}</annotation></semantics></math>. As such we may regard it equivalently as a <a class="existingWikiWord" href="/nlab/show/homotopy+1-type">homotopy 1-type</a> with group structure, and as such it it is equivalent to its <a class="existingWikiWord" href="/nlab/show/delooping">delooping</a></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>B</mi> <mo>⊗</mo></msub><mi>Line</mi><mo stretchy="false">(</mo><mi>𝒞</mi><msub><mo stretchy="false">)</mo> <mi>iso</mi></msub></mrow><annotation encoding="application/x-tex">
+  B_\otimes Line(\mathcal{C})_{iso}
 
 </annotation></semantics></math></div>
 <p>regarded as a <a class="existingWikiWord" href="/nlab/show/pointed+homotopy+type">pointed homotopy type</a>. (See at <em><a class="existingWikiWord" href="/nlab/show/looping+and+delooping">looping and delooping</a></em>).</p>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/Grothendieck+group">Grothendieck group</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>𝒞</mi><mo>,</mo><mo>⊗</mo><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(\mathcal{C}, \otimes, 1)</annotation></semantics></math> is</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>π</mi> <mn>0</mn></msub><mo stretchy="false">(</mo><mi>Line</mi><mo stretchy="false">(</mo><mi>𝒞</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>π</mi> <mn>1</mn></msub><mo stretchy="false">(</mo><mi>B</mi><mi>Line</mi><mo stretchy="false">(</mo><mi>𝒞</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
-  \pi_0(Line(\mathcal{C}))
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>π</mi> <mn>0</mn></msub><mo stretchy="false">(</mo><mi>Line</mi><mo stretchy="false">(</mo><mi>𝒞</mi><msub><mo stretchy="false">)</mo> <mi>iso</mi></msub><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>π</mi> <mn>1</mn></msub><mo stretchy="false">(</mo><mi>B</mi><mi>Line</mi><mo stretchy="false">(</mo><mi>𝒞</mi><msub><mo stretchy="false">)</mo> <mi>iso</mi></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
+  \pi_0(Line(\mathcal{C})_{iso})
     \simeq
-  \pi_1(B Line(\mathcal{C}))
+  \pi_1(B Line(\mathcal{C})_{iso})
 
 </annotation></semantics></math></div>
 <p>the <a class="existingWikiWord" href="/nlab/show/fundamental+group">fundamental group</a> of the delooping space.</p>
 
-<p>Now a symmetric braiding on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Line</mi><mo stretchy="false">(</mo><mi>𝒞</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Line(\mathcal{C})</annotation></semantics></math> is precisely the structure that makes it a <a class="existingWikiWord" href="/nlab/show/symmetric+2-group">symmetric 2-group</a> which is equivalently the structure of a second <a class="existingWikiWord" href="/nlab/show/delooping">delooping</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>B</mi> <mn>2</mn></msup><mi>Line</mi><mo stretchy="false">(</mo><mi>𝒞</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">B^2 Line(\mathcal{C})</annotation></semantics></math> (for the braiding) and then a third delooping <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>B</mi> <mn>3</mn></msup><mi>Line</mi><mo stretchy="false">(</mo><mi>𝒞</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">B^3 Line(\mathcal{C})</annotation></semantics></math> (for the symmetry), regarded as a <a class="existingWikiWord" href="/nlab/show/pointed+homotopy+type">pointed homotopy type</a>.</p>
+<p>Now a symmetric braiding on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Line</mi><mo stretchy="false">(</mo><mi>𝒞</mi><msub><mo stretchy="false">)</mo> <mi>iso</mi></msub></mrow><annotation encoding="application/x-tex">Line(\mathcal{C})_{iso}</annotation></semantics></math> is precisely the structure that makes it a <a class="existingWikiWord" href="/nlab/show/symmetric+2-group">symmetric 2-group</a> which is equivalently the structure of a second <a class="existingWikiWord" href="/nlab/show/delooping">delooping</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>B</mi> <mn>2</mn></msup><mi>Line</mi><mo stretchy="false">(</mo><mi>𝒞</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">B^2 Line(\mathcal{C})</annotation></semantics></math> (for the braiding) and then a third delooping <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>B</mi> <mn>3</mn></msup><mi>Line</mi><mo stretchy="false">(</mo><mi>𝒞</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">B^3 Line(\mathcal{C})</annotation></semantics></math> (for the symmetry), regarded as a <a class="existingWikiWord" href="/nlab/show/pointed+homotopy+type">pointed homotopy type</a>.</p>
 
 <p>This way we have rephrased the question equivalently as a question about the possible <a class="existingWikiWord" href="/nlab/show/k-invariants">k-invariants</a> of spaces of this form.</p>
 
@@ -1523,8 +1553,8 @@ r \;\colon\; (-) \otimes 1 \overset{\simeq}{\longrightarrow} (-)
 
 </annotation></semantics></math></div>
 <p>In other words</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>π</mi> <mn>0</mn></msub><mo stretchy="false">(</mo><mi>Line</mi><mo stretchy="false">(</mo><msup><mi>Vect</mi> <mrow><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn></mrow></msup><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>≃</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
-  \pi_0(Line(Vect^{\mathbb{Z}/2})) \simeq \mathbb{Z}/2
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>π</mi> <mn>0</mn></msub><mo stretchy="false">(</mo><mi>Line</mi><mo stretchy="false">(</mo><msup><mi>Vect</mi> <mrow><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn></mrow></msup><msub><mo stretchy="false">)</mo> <mi>iso</mi></msub><mo stretchy="false">)</mo><mo>≃</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  \pi_0(Line(Vect^{\mathbb{Z}/2})_{iso}) \simeq \mathbb{Z}/2
   \,.
 
 </annotation></semantics></math></div>
@@ -5297,14 +5327,14 @@ A \otimes 1
 
 <div class="revisedby">
   <p>
-  Last revised on September 15, 2018 at 09:37:12.
+  Last revised on November 29, 2018 at 03:45:24.
   See the <a href="https://ncatlab.org/nlab/history/Deligne&#39;s theorem on tensor categories" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Deligne%27s+theorem+on+tensor+categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Deligne%27s+theorem+on+tensor+categories/74" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(74 revisions)</span> | <a href="/nlab/show/diff/Deligne%27s+theorem+on+tensor+categories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Deligne%27s+theorem+on+tensor+categories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Deligne%27s+theorem+on+tensor+categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Deligne%27s+theorem+on+tensor+categories/75" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(75 revisions)</span> | <a href="/nlab/show/diff/Deligne%27s+theorem+on+tensor+categories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Deligne%27s+theorem+on+tensor+categories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Deligne&#39;s theorem on tensor categories/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
