--- a/pages/19719.html
+++ b/pages/19719.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9044/#Item_8" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9044/#Item_46" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -321,6 +321,7 @@ margin-left: 0em;
 </ul>
 <li><a href='#jobs_and_volunteers'>Jobs and volunteers</a></li>
 <li><a href='#background_links'>Background links</a></li>
+<li><a href='#page_index'>Page index</a></li>
 </ul>
 </div>
 
@@ -373,7 +374,7 @@ margin-left: 0em;
 
 <li>Define a morphism of CwFs in <a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Semantics">Initiality Project - Semantics</a> (<a class="existingWikiWord" href="/nlab/show/Paolo+Capriotti">Paolo Capriotti</a>).</li>
 
-<li>Define <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Π</mi></mrow><annotation encoding="application/x-tex">\Pi</annotation></semantics></math>-type structure on a CwF in <span class="newWikiWord">Initiality Project - Semantics - Pi-types<a href="/nlab/new/Initiality+Project+-+Semantics+-+Pi-types">?</a></span>.</li>
+<li>Define <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Π</mi></mrow><annotation encoding="application/x-tex">\Pi</annotation></semantics></math>-type structure on a CwF in <a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Semantics+-+Pi-types">Initiality Project - Semantics - Pi-types</a>.</li>
 
 <li>Write out the equality rules at <a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Type+Theory">Initiality Project - Type Theory</a> (<span class="newWikiWord">Kenji Maillard<a href="/nlab/new/Kenji+Maillard">?</a></span>).</li>
 
@@ -405,20 +406,62 @@ margin-left: 0em;
 
 <li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Participants">participant list</a>. If you would like to participate, simply add your name to the list and join the conversation! All work will take place publically on nLab pages, nForum discussions, etc.</li>
 </ul>
+
+<h2 id="page_index">Page index</h2>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project">Initiality Project</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+BibTeX+database">Initiality Project - BibTeX database</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Overview">Initiality Project - Overview</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Partial+Interpretation">Initiality Project - Partial Interpretation</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Participants">Initiality Project - Participants</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Pi-types">Initiality Project - Pi-types</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Raw+Syntax">Initiality Project - Raw Syntax</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Raw+Syntax+-+Pi-types">Initiality Project - Raw Syntax - Pi-types</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+References">Initiality Project - References</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Semantics">Initiality Project - Semantics</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Semantics+-+Pi-types">Initiality Project - Semantics - Pi-types</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Substitution">Initiality Project - Substitution</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Term+Model">Initiality Project - Term Model</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Term+Model+-+Pi-types">Initiality Project - Term Model - Pi-types</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Totality">Initiality Project - Totality</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Type+Theory">Initiality Project - Type Theory</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Type+Theory+-+Pi-types">Initiality Project - Type Theory - Pi-types</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Type+Theory+-+Term+equality">Initiality Project - Type Theory - Term equality</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Type+Theory+-+Type+equality">Initiality Project - Type Theory - Type equality</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Uniqueness">Initiality Project - Uniqueness</a></p>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/Initiality+Project">Initiality Project</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 31, 2018 at 05:44:40.
+  Last revised on November 29, 2018 at 04:59:33.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/42" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(42 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/43" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(43 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
