--- a/pages/1600.html
+++ b/pages/1600.html
@@ -895,7 +895,7 @@ margin-left: 0em;
 <p>Yet another description is due to</p>
 
 <ul>
-<li>
+<li id="Koerschgen16">
 <p>Alexander Körschgen, <em>A Comparison of two Models of Orbispaces</em>, Homology, Homotopy and Applications, vol. 20(1), 2018, pp.329–358 (<a href="https://arxiv.org/abs/1612.04267">arXiv:1612.04267</a>)</p>
 </li>
 
@@ -915,14 +915,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 26, 2018 at 09:52:41.
+  Last revised on November 29, 2018 at 09:59:53.
   See the <a href="https://ncatlab.org/nlab/history/orbispace" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orbispace" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbispace/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/orbispace" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbispace" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orbispace" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbispace/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/orbispace" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbispace" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orbispace/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
