--- a/pages/10135.html
+++ b/pages/10135.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -818,6 +818,10 @@ margin-left: 0em;
 <li><a href='#lift_of_orbifolds_to_geometric_global_homotopy_theory'>Lift of orbifolds to geometric global homotopy theory</a></li>
 </ul>
 <li><a href='#definition'>Definition</a></li>
+<ul>
+<li><a href='#globally_equivariant_cohesive_toposes'>Globally equivariant cohesive toposes</a></li>
+<li><a href='#orbifolds'>Orbifolds</a></li>
+</ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
@@ -940,6 +944,8 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <h2 id="definition">Definition</h2>
+
+<h3 id="globally_equivariant_cohesive_toposes">Globally equivariant cohesive toposes</h3>
 
 <div class="num_defn" id="CategoryOfSingularities">
 <h6 id="definition_2">Definition</h6>
@@ -1128,7 +1134,7 @@ margin-left: 0em;
 <p>and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Π</mi><mo stretchy="false">(</mo><mi>S</mi><mo stretchy="false">)</mo><mo>≃</mo><mo>*</mo></mrow><annotation encoding="application/x-tex">\Pi(S) \simeq \ast</annotation></semantics></math> for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>S</mi><mo>∈</mo><mi>𝒮</mi><mover><mo>↪</mo><mi>y</mi></mover><mstyle mathvariant="bold"><mi>H</mi></mstyle></mrow><annotation encoding="application/x-tex">S \in \mathcal{S} \overset{y}{\hookrightarrow} \mathbf{H}</annotation></semantics></math>.</p>
 
 <p>Then as <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-presheaves">(∞,1)-presheaves</a> regarded this way we have</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable displaystyle="true" columnalign="right left right left right left right left right left" columnspacing="0em"><mtr><mtd><msub><mi>coDisc</mi> <mi>sing</mi></msub><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>S</mi><mo>×</mo><mi>𝔹</mi><mi>K</mi></mtd> <mtd><mo>↦</mo><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>sing</mi></msub><mrow><mo>(</mo><mi>S</mi><mo>×</mo><mi>𝔹</mi><mi>K</mi><mo>,</mo><msub><mi>coDisc</mi> <mi>sing</mi></msub><mi>Disc</mi><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo>)</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><mstyle mathvariant="bold"><mi>H</mi></mstyle><mo maxsize="1.2em" minsize="1.2em">(</mo><mi>S</mi><mo>×</mo><munder><munder><mrow><msub><mi>Γ</mi> <mi>sing</mi></msub><mrow><mo>(</mo><mi>𝔹</mi><mi>K</mi><mo>)</mo></mrow></mrow><mo>⏟</mo></munder><mrow><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi></mrow></munder><mo>,</mo><mi>Disc</mi><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo maxsize="1.2em" minsize="1.2em">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><mn>∞</mn><mi>Groupoids</mi><mo maxsize="1.2em" minsize="1.2em">(</mo><munder><munder><mrow><mi>Π</mi><mo stretchy="false">(</mo><mi>S</mi><mo>×</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>K</mi><mo stretchy="false">)</mo></mrow><mo>⏟</mo></munder><mrow><mo>≃</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>K</mi></mrow></munder><mspace width="thinmathspace"></mspace><mo>,</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo maxsize="1.2em" minsize="1.2em">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><mn>∞</mn><mi>Groupoids</mi><mrow><mo>(</mo><mi>B</mi><mi>K</mi><mo>,</mo><mi>BG</mi><mo>)</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>sing</mi></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mi>𝔹</mi><mi>K</mi><mo>,</mo><mi>𝔹</mi><mi>G</mi><mo maxsize="1.2em" minsize="1.2em">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>sing</mi></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mi>S</mi><mo>×</mo><mi>𝔹</mi><mi>K</mi><mo>,</mo><mi>𝔹</mi><mi>G</mi><mo maxsize="1.2em" minsize="1.2em">)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable displaystyle="true" columnalign="right left right left right left right left right left" columnspacing="0em"><mtr><mtd><msub><mi>coDisc</mi> <mi>sing</mi></msub><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>S</mi><mo>×</mo><mi>𝔹</mi><mi>K</mi></mtd> <mtd><mo>↦</mo><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>sing</mi></msub><mrow><mo>(</mo><mi>S</mi><mo>×</mo><mi>𝔹</mi><mi>K</mi><mo>,</mo><msub><mi>coDisc</mi> <mi>sing</mi></msub><mi>Disc</mi><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo>)</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><mstyle mathvariant="bold"><mi>H</mi></mstyle><mo maxsize="1.2em" minsize="1.2em">(</mo><mi>S</mi><mo>×</mo><munder><munder><mrow><msub><mi>Γ</mi> <mi>sing</mi></msub><mrow><mo>(</mo><mi>𝔹</mi><mi>K</mi><mo>)</mo></mrow></mrow><mo>⏟</mo></munder><mrow><mo>≃</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi></mrow></munder><mo>,</mo><mi>Disc</mi><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo maxsize="1.2em" minsize="1.2em">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><mn>∞</mn><mi>Groupoids</mi><mo maxsize="1.2em" minsize="1.2em">(</mo><munder><munder><mrow><mi>Π</mi><mo stretchy="false">(</mo><mi>S</mi><mo>×</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>K</mi><mo stretchy="false">)</mo></mrow><mo>⏟</mo></munder><mrow><mo>≃</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>K</mi></mrow></munder><mspace width="thinmathspace"></mspace><mo>,</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo maxsize="1.2em" minsize="1.2em">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><mn>∞</mn><mi>Groupoids</mi><mrow><mo>(</mo><mi>B</mi><mi>K</mi><mo>,</mo><mi>BG</mi><mo>)</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>sing</mi></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mi>𝔹</mi><mi>K</mi><mo>,</mo><mi>𝔹</mi><mi>G</mi><mo maxsize="1.2em" minsize="1.2em">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>sing</mi></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mi>S</mi><mo>×</mo><mi>𝔹</mi><mi>K</mi><mo>,</mo><mi>𝔹</mi><mi>G</mi><mo maxsize="1.2em" minsize="1.2em">)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
   \begin{aligned}
     coDisc_{sing} \mathbf{B}G
     \;\colon\;
@@ -1141,7 +1147,7 @@ margin-left: 0em;
        S 
          \times 
        \underset{
-         \mathbf{B}G
+         \simeq \mathbf{B}G
        }{
        \underbrace{
          \Gamma_{sing}\left( \mathbb{B}K\right)
@@ -1182,6 +1188,57 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>Here we used the various <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-adjunctions">(∞,1)-adjunctions</a> and the <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-Yoneda+lemma">(∞,1)-Yoneda lemma</a>, and the claim in turn follows by the <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-Yoneda+lemma">(∞,1)-Yoneda lemma</a>.</p>
+</div>
+
+<h3 id="orbifolds">Orbifolds</h3>
+
+<div class="num_defn">
+<h6 id="definition_3">Definition</h6>
+
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mstyle mathvariant="bold"><mi>H</mi></mstyle></mrow><annotation encoding="application/x-tex">\mathbf{H}</annotation></semantics></math> be a <a class="existingWikiWord" href="/nlab/show/differential+cohesion">differentially cohesive (∞,1)-topos</a> with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>sing</mi></msub></mrow><annotation encoding="application/x-tex">\mathbf{H}_{sing}</annotation></semantics></math> its corresponding <a class="existingWikiWord" href="/nlab/show/globally+equivariant+homotopy+theory">globally equivariant homotopy theory</a> according to Prop. <a class="maruku-ref" href="#CohesionOfGlobalEquivariantHomotopyTheory"></a>.</p>
+
+<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>∈</mo><mi>Grp</mi><mo stretchy="false">(</mo><mstyle mathvariant="bold"><mi>H</mi></mstyle><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">G \in Grp(\mathbf{H})</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi><mo>∈</mo><mi>Grp</mi><mo stretchy="false">(</mo><mstyle mathvariant="bold"><mi>H</mi></mstyle><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">V \in Grp(\mathbf{H})</annotation></semantics></math> a 0-truncated group, we say that a <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi></mrow><annotation encoding="application/x-tex">V</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a> with <a class="existingWikiWord" href="/nlab/show/isotropy+groups">isotropy groups</a> inside <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math></em> is</p>
+
+<ol>
+<li>
+<p>a <a class="existingWikiWord" href="/nlab/show/n-truncated+object+in+an+%28infinity%2C1%29-category">0-truncated</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Singularity</mi></mrow><annotation encoding="application/x-tex">Singularity</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/codiscrete+object">codiscrete object</a> in the <a class="existingWikiWord" href="/nlab/show/slice+%28%E2%88%9E%2C1%29-topos">slice (∞,1)-topos</a> over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝔹</mi><mi>G</mi></mrow><annotation encoding="application/x-tex">\mathbb{B}G</annotation></semantics></math>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd><mi>𝒳</mi></mtd></mtr> <mtr><mtd><msup><mo stretchy="false">↓</mo> <mpadded width="0"><mi>faith</mi></mpadded></msup></mtd></mtr> <mtr><mtd><mi>𝔹</mi><mi>G</mi></mtd></mtr></mtable></mrow><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><msub><mi>coDisc</mi> <mi>sing</mi></msub><mrow><mo>(</mo><mrow><mtable><mtr><mtd><mi>X</mi></mtd></mtr> <mtr><mtd><mo stretchy="false">↓</mo></mtd></mtr> <mtr><mtd><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi></mtd></mtr></mtable></mrow><mo>)</mo></mrow><mspace width="thickmathspace"></mspace><mo>∈</mo><mspace width="thickmathspace"></mspace><msub><mrow><mo>(</mo><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>sing</mi></msub><mo>)</mo></mrow> <mrow><mo stretchy="false">/</mo><mi>𝔹</mi><mi>G</mi></mrow></msub></mrow><annotation encoding="application/x-tex">
+  \array{
+    \mathcal{X}
+    \\
+    \downarrow^{\mathrlap{faith}}
+    \\
+    \mathbb{B}G
+  }
+  \;\coloneqq\;
+  coDisc_{sing}
+  \left(
+    \array{
+      X
+      \\
+      \downarrow
+      \\
+      \mathbf{B}G
+    }
+  \right)
+  \;\in\;
+  \left( 
+    \mathbf{H}_{sing}
+  \right)_{/\mathbb{B}G}
+
+</annotation></semantics></math></div></li>
+
+<li>
+<p>such that the object</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>Γ</mi> <mi>sing</mi></msub><mrow><mo>(</mo><mi>𝒳</mi><mo>)</mo></mrow><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mi>X</mi></mrow><annotation encoding="application/x-tex">
+  \Gamma_{sing}\left(\mathcal{X}\right)
+  \;\simeq\;
+  X
+
+</annotation></semantics></math></div>
+<p>is a <a class="existingWikiWord" href="/nlab/show/V-manifold">V-manifold</a>.</p>
+</li>
+</ol>
 </div>
 
 <h2 id="related_concepts">Related concepts</h2>
@@ -1253,7 +1310,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 29, 2018 at 10:54:33.
+  Last revised on November 29, 2018 at 11:10:04.
   See the <a href="https://ncatlab.org/nlab/history/orbifold cohomology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
