--- a/pages/1788.html
+++ b/pages/1788.html
@@ -309,6 +309,70 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
+<div class="num_remark">
+<h6 id="remark">Remark</h6>
+
+<p>In Def. <a class="maruku-ref" href="#Orbifold"></a> the condition of <a class="existingWikiWord" href="/nlab/show/n-truncated+object+in+an+%28infinity%2C1%29-category">0-truncation</a> is crucial in two respects:</p>
+
+<ol>
+<li>
+<p>First of all it means that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒳</mi><mo>→</mo><mi>𝔹</mi><mi>G</mi></mrow><annotation encoding="application/x-tex">\mathcal{X} \to \mathbb{B}G</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/faithful+morphism">faithful morphism</a> which identifies it as an object in geometric <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/equivariant+homotopy+theory">equivariant homotopy theory</a> via</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mo>(</mo><mrow><mtable><mtr><mtd><mi>𝒳</mi></mtd></mtr> <mtr><mtd><mo stretchy="false">↓</mo></mtd></mtr> <mtr><mtd><mi>𝔹</mi><mi>G</mi></mtd></mtr></mtable></mrow><mo>)</mo></mrow><mspace width="thickmathspace"></mspace><mo>∈</mo><mspace width="thickmathspace"></mspace><msub><mrow><mo>(</mo><msub><mrow><mo>(</mo><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>sing</mi></msub><mo>)</mo></mrow> <mrow><mo stretchy="false">/</mo><mi>𝔹</mi><mi>G</mi></mrow></msub><mo>)</mo></mrow> <mi>faith</mi></msub><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msub><mi>Sh</mi> <mn>∞</mn></msub><mrow><mo>(</mo><mi>G</mi><mi>Orbits</mi><mo>,</mo><mstyle mathvariant="bold"><mi>H</mi></mstyle><mo>)</mo></mrow></mrow><annotation encoding="application/x-tex">
+  \left(
+    \array{
+      \mathcal{X}
+      \\
+      \downarrow
+      \\
+      \mathbb{B}G
+    }
+  \right)
+  \;\in\;
+  \left(
+  \left(
+    \mathbf{H}_{sing}
+  \right)_{/\mathbb{B}G}
+  \right)_{faith}
+  \;\simeq\;
+  Sh_\infty\left( G Orbits, \mathbf{H}\right)
+
+</annotation></semantics></math></div></li>
+
+<li>
+<p>but moreover, only with this condition is the <a class="existingWikiWord" href="/nlab/show/shape+modality">shape</a> of an orbifold in the sense of Prop. <a class="maruku-ref" href="#Orbifold"></a> the <em>expected</em> object in plain <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/equivariant+homotopy+theory">equivariant homotopy theory</a></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>ʃ</mi><mi>𝒳</mi><mspace width="thickmathspace"></mspace><mo>∈</mo><mspace width="thickmathspace"></mspace><munder><munder><mrow><msub><mi>Sh</mi> <mn>∞</mn></msub><msub><mrow><mo>(</mo><mi>Singularities</mi><mo>,</mo><mn>∞</mn><mi>Groupoids</mi><mo>)</mo></mrow> <mrow><mo stretchy="false">/</mo><mi>𝔹</mi><mi>G</mi></mrow></msub></mrow><mo>⏟</mo></munder><mrow><mo>≃</mo><msub><mi>Sh</mi> <mn>∞</mn></msub><mrow><mo>(</mo><mi>G</mi><mi>Orbits</mi><mo>,</mo><mn>∞</mn><mi>Groupoids</mi><mo>)</mo></mrow></mrow></munder><mover><mo>↪</mo><mi>Disc</mi></mover><munder><munder><mrow><msub><mi>Sh</mi> <mn>∞</mn></msub><msub><mrow><mo>(</mo><mi>Singularities</mi><mo>,</mo><mstyle mathvariant="bold"><mi>H</mi></mstyle><mo>)</mo></mrow> <mrow><mo stretchy="false">/</mo><mi>𝔹</mi><mi>G</mi></mrow></msub></mrow><mo>⏟</mo></munder><mrow><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>sing</mi></msub></mrow></munder></mrow><annotation encoding="application/x-tex">
+  &amp;#643; \mathcal{X}
+  \;\in\;
+  \underset{
+    \simeq Sh_\infty\left( G Orbits, \infty Groupoids \right)
+  }{
+  \underbrace{
+    Sh_\infty\left( Singularities, \infty Groupoids \right)_{/\mathbb{B}G}
+  }
+  }
+  \overset{Disc}{\hookrightarrow}
+  \underset{
+    \mathbf{H}_{sing}
+  }{
+  \underbrace{
+    Sh_\infty\left( Singularities, \mathbf{H} \right)_{/\mathbb{B}G}
+  }
+  }
+
+</annotation></semantics></math></div></li>
+</ol>
+
+<p>The second point comes about as follows: Given ab <a class="existingWikiWord" href="/nlab/show/G-space">G-space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math>, its incarnation as an object in plain (non-geometric) <a class="existingWikiWord" href="/nlab/show/globally+equivariant+homotopy+theory">globally equivariant homotopy theory</a> is (<a href="#Rezk14">Rezk 14, 3.2</a>)</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>δ</mi> <mi>G</mi></msub><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>𝔹</mi><mi>K</mi><mspace width="thickmathspace"></mspace><mo>↦</mo><mspace width="thickmathspace"></mspace><mo stretchy="false">|</mo><mi>TopGroupoid</mi><mrow><mo>(</mo><mo>*</mo><mo>⫽</mo><mi>K</mi><mo>,</mo><mi>X</mi><mo>⫽</mo><mi>G</mi><mo>)</mo></mrow><mo stretchy="false">|</mo><mspace width="thinmathspace"></mspace><mo>,</mo></mrow><annotation encoding="application/x-tex">
+  \delta_G
+  \;\colon\;
+  \mathbb{B}K 
+  \;\mapsto\;
+  \vert TopGroupoid\left( \ast\sslash K, X \sslash G\right) \vert
+  \,,
+
+</annotation></semantics></math></div></div>
+
 <p>…</p>
 
 <p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo lspace="0em" rspace="thinmathspace">acts</mo></mrow><annotation encoding="application/x-tex">\acts</annotation></semantics></math></p>
@@ -320,14 +384,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 29, 2018 at 09:57:19.
+  Last revised on November 30, 2018 at 02:11:22.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1724" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1724 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1725" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1725 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
