--- a/pages/17052.html
+++ b/pages/17052.html
@@ -913,7 +913,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/instanton">instanton</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/instanton">instanton</a>, <a class="existingWikiWord" href="/nlab/show/soliton">soliton</a>, <a class="existingWikiWord" href="/nlab/show/vortex">vortex</a></p>
 </li>
 
 <li>
@@ -996,14 +996,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 21, 2018 at 03:24:34.
+  Last revised on November 30, 2018 at 08:28:05.
   See the <a href="https://ncatlab.org/nlab/history/caloron" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/caloron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/caloron/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/caloron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/caloron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/caloron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/caloron/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/caloron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/caloron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/caloron/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
