--- a/pages/6520.html
+++ b/pages/6520.html
@@ -991,6 +991,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/soliton">soliton</a>, <a class="existingWikiWord" href="/nlab/show/vortex">vortex</a></p>
+</li>
+
+<li>
 <p><a class="existingWikiWord" href="/nlab/show/brane">brane</a></p>
 </li>
 
@@ -1124,14 +1128,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 19, 2018 at 11:00:53.
+  Last revised on November 30, 2018 at 08:27:35.
   See the <a href="https://ncatlab.org/nlab/history/instanton" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/instanton" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/instanton/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/instanton" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/instanton" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/instanton" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/instanton/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/instanton" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/instanton" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/instanton/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
