--- a/pages/19392.html
+++ b/pages/19392.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8462/#Item_10" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8462/#Item_12" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -351,7 +351,7 @@ margin-left: 0em;
 
 <h3 id="type_structure">Type Structure</h3>
 
-<p>Call-by-push-value is characterized not just by its judgmental structure, but by a specific <em>choice</em> of which connectives to use. Except for the sfhits <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>F</mi><mo>,</mo><mi>U</mi></mrow><annotation encoding="application/x-tex">F,U</annotation></semantics></math>, all value type connectives are left adjoints, and all computation type connectives are right adjoints.</p>
+<p>Call-by-push-value is characterized not just by its judgmental structure, but by a specific <em>choice</em> of which connectives to use. Except for the shifts <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>F</mi><mo>,</mo><mi>U</mi></mrow><annotation encoding="application/x-tex">F,U</annotation></semantics></math>, all value type connectives are left adjoints, and all computation type connectives are right adjoints.</p>
 
 <p>For this reason, some connectives are definable from the judgments but excluded because they violate this discipline. These are a tensor product <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo>⊗</mo><mi>B</mi></mrow><annotation encoding="application/x-tex">A \otimes B</annotation></semantics></math> which is a computation type, a unit <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>I</mi></mrow><annotation encoding="application/x-tex">I</annotation></semantics></math> computation type, and a linear function space <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi><mo>⊸</mo><mi>B</mi><mo>′</mo></mrow><annotation encoding="application/x-tex">B \multimap B'</annotation></semantics></math> which is a computation type. When these are added, the system is called the <a href="#EEC">Enriched Effect Calculus</a> (modulo some superficial syntactic differences).</p>
 
@@ -426,14 +426,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 18, 2018 at 09:01:13.
+  Last revised on November 30, 2018 at 22:30:44.
   See the <a href="https://ncatlab.org/nlab/history/call-by-push-value" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/call-by-push-value" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/call-by-push-value/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/call-by-push-value" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/call-by-push-value" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/call-by-push-value" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/call-by-push-value/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/call-by-push-value" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/call-by-push-value" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/call-by-push-value/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
