--- a/pages/19960.html
+++ b/pages/19960.html
@@ -896,7 +896,7 @@ margin-left: 0em;
 <li><a href='#Models'>Models</a></li>
 <ul>
 <li><a href='#TopDownModels'>Top-down models</a></li>
-<li><a href='#bottomup_models'>Bottom-up models</a></li>
+<li><a href='#BottomUpModels'>Bottom-up models</a></li>
 </ul>
 <li><a href='#properties'>Properties</a></li>
 <ul>
@@ -960,7 +960,7 @@ margin-left: 0em;
 <p>graphics grabbed from <a href="#Rebhan14">Rebhan 14</a></p>
 </blockquote>
 
-<h3 id="bottomup_models">Bottom-up models</h3>
+<h3 id="BottomUpModels">Bottom-up models</h3>
 
 <p>A popular <a class="existingWikiWord" href="/nlab/show/bottom-up+model+building">bottom-up approach</a> of AdS/QCD is known as the <em>hard-wall model</em> (<a href="#ErlichKatzSonStephanov05">Erlich-Katz-Son-Stephanov 05</a>).</p>
 
@@ -1289,14 +1289,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 30, 2018 at 12:22:20.
+  Last revised on December  1, 2018 at 07:55:31.
   See the <a href="https://ncatlab.org/nlab/history/AdS-QCD correspondence" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AdS-QCD+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-QCD+correspondence/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/AdS-QCD+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-QCD+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AdS-QCD+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-QCD+correspondence/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/AdS-QCD+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-QCD+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/AdS-QCD correspondence/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
