--- a/pages/19960.html
+++ b/pages/19960.html
@@ -1025,7 +1025,7 @@ margin-left: 0em;
 <p>Joshua Erlich, <em>An Introduction to Holographic QCD for Nonspecialists</em>, Contemporary Physics (<a href="https://arxiv.org/abs/1407.5002">arXiv:1407.5002</a>)</p>
 </li>
 
-<li>
+<li id="Guijosa16">
 <p>Alberto Guijosa, <em>QCD, with Strings Attached</em>, IJMPE Vol. 25, No. 10 (2016) 1630006 (<a href="https://arxiv.org/abs/1611.07472">arXiv:1611.07472</a>)</p>
 </li>
 
@@ -1289,7 +1289,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  1, 2018 at 07:55:31.
+  Last revised on December  1, 2018 at 08:08:13.
   See the <a href="https://ncatlab.org/nlab/history/AdS-QCD correspondence" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
