--- a/pages/10647.html
+++ b/pages/10647.html
@@ -406,7 +406,7 @@ margin-left: 0em;
 
 <h2 id="harmonic_coordinate_representation_and_regularity">Harmonic coordinate representation and regularity</h2>
 
-<p>By a trick of DeTurck and Kazdan (or already Lanczos?) in harmonic coordinates the Ricci tensor can be expressed as</p>
+<p>By a trick of Lanczos, that was recovered by DeTurck and Kazdan, in harmonic coordinates the Ricci tensor can be expressed as</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>Ric</mi> <mi>lm</mi></msub><mo>=</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mfrac><mn>1</mn><mn>2</mn></mfrac><munder><mo lspace="thinmathspace" rspace="thinmathspace">∑</mo> <mrow><mi>j</mi><mo>,</mo><mi>k</mi></mrow></munder><msub><mo>∂</mo> <mi>j</mi></msub><msup><mi>g</mi> <mi>jk</mi></msup><msub><mo>∂</mo> <mi>k</mi></msub><msub><mi>g</mi> <mi>lm</mi></msub><mo>+</mo><msub><mi>Q</mi> <mi>lm</mi></msub><mo stretchy="false">(</mo><mi>g</mi><mo>,</mo><mo>∇</mo><mi>g</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
 Ric_{lm} = -\frac{1}{2} \sum_{j,k} \partial_j g^{jk}\partial_k g_{lm} + Q_{lm}(g, \nabla g)
 
@@ -437,8 +437,22 @@ Ric_{lm} = -\frac{1}{2} \sum_{j,k} \partial_j g^{jk}\partial_k g_{lm} + Q_{lm}(g
 <h2 id="references">References</h2>
 
 <ul>
-<li>Wikipedia, <em><a href="http://en.wikipedia.org/wiki/Ricci_curvature">Ricci curvature</a></em></li>
+<li>
+<p>Wikipedia, <em><a href="http://en.wikipedia.org/wiki/Ricci_curvature">Ricci curvature</a></em></p>
+</li>
 
+<li>
+<p>Lanczos, _ Ein vereinfachendes Koordinatensystem für die Einsteinschen Gravitationsgleichungen_ Phys. Z. 23, 537-539 (1922)</p>
+</li>
+
+<li>
+<p>DeTurck and Kazdan, <em>Some regularity theorems in Riemannian geometry</em>, Ann. scient. Éc. Norm. Sup. (1981)</p>
+</li>
+</ul>
+
+<p>For regularity result see</p>
+
+<ul>
 <li>Anderson, <em>Convergence and rigidity of manifolds under Ricci curvature bounds</em> , Invent. Math. (1990)</li>
 
 <li>Cheeger and Naber, <em>Lower bounds on Ricci curvature and quantitative behavior of singular sets</em> Invent. Math. (2013)</li>
@@ -447,7 +461,7 @@ Ric_{lm} = -\frac{1}{2} \sum_{j,k} \partial_j g^{jk}\partial_k g_{lm} + Q_{lm}(g
 <p>For weaker but more general regularity results see also:</p>
 
 <ul>
-<li>Anderson und Cheeger, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>C</mi> <mi>α</mi></msup></mrow><annotation encoding="application/x-tex">C^\alpha</annotation></semantics></math>-compactness for manifolds with Ricci curvature and injectivity radius bounded below</em> J. Diff. Geo. (1992)</li>
+<li>Anderson and Cheeger, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>C</mi> <mi>α</mi></msup></mrow><annotation encoding="application/x-tex">C^\alpha</annotation></semantics></math>-compactness for manifolds with Ricci curvature and injectivity radius bounded below</em> J. Diff. Geo. (1992)</li>
 </ul>
 </body></html>
 
@@ -455,7 +469,7 @@ Ric_{lm} = -\frac{1}{2} \sum_{j,k} \partial_j g^{jk}\partial_k g_{lm} + Q_{lm}(g
 
 <div class="revisedby">
   <p>
-  Last revised on December  2, 2018 at 04:48:37.
+  Last revised on December  2, 2018 at 05:13:47.
   See the <a href="https://ncatlab.org/nlab/history/Ricci curvature" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
