--- a/pages/444.html
+++ b/pages/444.html
@@ -529,7 +529,7 @@ margin-left: 0em;
 
 <h3 id="NerveOfACategory">Nerve of a 1-category</h3>
 
-<p>For fixing notation, recall that</p>
+<p>For fixing notation, recall that the source and target maps of a small <a class="existingWikiWord" href="/nlab/show/category#OneCollectionOfMorphisms">category</a> form a <a class="existingWikiWord" href="/nlab/show/span">span</a> in the category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Span</mi><mo stretchy="false">(</mo><mi>Set</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Span(Set)</annotation></semantics></math> where composition <a class="existingWikiWord" href="/nlab/show/span#categories_of_spans">is given by a pullback</a> (fiber product). The pairs of composable morphisms of a category are then obtained composing its source/target span with itself.</p>
 
 <div class="num_defn" id="SmallCategory">
 <h6 id="definition_2">Definition</h6>
@@ -1162,14 +1162,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 27, 2018 at 20:50:43.
+  Last revised on December  2, 2018 at 05:36:02.
   See the <a href="https://ncatlab.org/nlab/history/nerve" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/nerve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/nerve/53" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(53 revisions)</span> | <a href="/nlab/show/diff/nerve" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/nerve" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/nerve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/nerve/54" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(54 revisions)</span> | <a href="/nlab/show/diff/nerve" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/nerve" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/nerve/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
