--- a/pages/11408.html
+++ b/pages/11408.html
@@ -550,7 +550,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>The <strong>Löwenheim-Skolem theorem</strong> is a basic result in the <em><a class="existingWikiWord" href="/nlab/show/model+theory">model theory</a></em> of <a class="existingWikiWord" href="/nlab/show/first-order+logic">first-order logic</a> and is part of a family of closely related theorems that concern the relation between structures or <a class="existingWikiWord" href="/nlab/show/models">models</a> of <a class="existingWikiWord" href="/nlab/show/first-order+theories">first-order theories</a> of different cardinality.</p>
+<p>The <strong>Löwenheim-Skolem theorem</strong> is a basic result in the <em><a class="existingWikiWord" href="/nlab/show/model+theory">model theory</a></em> of <a class="existingWikiWord" href="/nlab/show/first-order+logic">first-order logic</a> and is part of a family of closely related theorems that concern the relation between structures or <a class="existingWikiWord" href="/nlab/show/models">models</a> of <a class="existingWikiWord" href="/nlab/show/first-order+theories">first-order theories</a> of different <a class="existingWikiWord" href="/nlab/show/cardinality">cardinality</a>.</p>
 
 <p>One idea behind it is that finitary first-order logic by itself cannot pin down the cardinality of infinite structures or models: roughly speaking, Löwenheim-Skolem says that given a such structure <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>M</mi></mrow><annotation encoding="application/x-tex">M</annotation></semantics></math>, one can construct elementary substructures or elementary extensions <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi></mrow><annotation encoding="application/x-tex">N</annotation></semantics></math> of different cardinalities. This gives an elementary reason why one cannot expect absolute <a class="existingWikiWord" href="/nlab/show/categoricity">categoricity</a> for first-order theories; after this theorem was introduced, attention shifted to the question of categoricity in powers <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>κ</mi></mrow><annotation encoding="application/x-tex">\kappa</annotation></semantics></math> (i.e., how many models there are of a given cardinality <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>κ</mi></mrow><annotation encoding="application/x-tex">\kappa</annotation></semantics></math>), leading up eventually to Morley’s categoricity results and, further down the road and in much greater generality, to Shelah’s introduction of <a class="existingWikiWord" href="/nlab/show/stability+theory">stability theory</a>.</p>
 
@@ -641,14 +641,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  2, 2018 at 08:32:50.
+  Last revised on December  2, 2018 at 09:12:05.
   See the <a href="https://ncatlab.org/nlab/history/Löwenheim-Skolem theorem" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/L%C3%B6wenheim-Skolem+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/L%C3%B6wenheim-Skolem+theorem/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/L%C3%B6wenheim-Skolem+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/L%C3%B6wenheim-Skolem+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/L%C3%B6wenheim-Skolem+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/L%C3%B6wenheim-Skolem+theorem/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/L%C3%B6wenheim-Skolem+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/L%C3%B6wenheim-Skolem+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Löwenheim-Skolem theorem/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
