--- a/pages/6213.html
+++ b/pages/6213.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -480,7 +480,7 @@ margin-left: 0em;
 
 <h2 id="definition">Definition</h2>
 
-<p>A <strong>normed algebra</strong> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math> over a <a class="existingWikiWord" href="/nlab/show/field">field</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/real+numbers">real</a> or <a class="existingWikiWord" href="/nlab/show/numbers">complex numbers</a> is a <a class="existingWikiWord" href="/nlab/show/normed+vector+space">normed vector space</a> equipped with an <a class="existingWikiWord" href="/nlab/show/associative+algebra">associative algebra</a> structure, such that the algebra multiplication is <a class="existingWikiWord" href="/nlab/show/continuous+function">continuous</a> with respect to the <a class="existingWikiWord" href="/nlab/show/norm">norm</a>, i.e. such that there is a positive real constant <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi><mo>&gt;</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">C\gt 0</annotation></semantics></math> such that</p>
+<p>A <strong>normed algebra</strong> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math> over a <a class="existingWikiWord" href="/nlab/show/field">field</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/real+numbers">real</a> or <a class="existingWikiWord" href="/nlab/show/numbers">complex numbers</a> is a <a class="existingWikiWord" href="/nlab/show/normed+vector+space">normed vector space</a> equipped with an <a class="existingWikiWord" href="/nlab/show/associative+algebra">associative algebra</a> structure, such that the algebra multiplication is <a class="existingWikiWord" href="/nlab/show/continuous+function">continuous</a> with respect to the <a class="existingWikiWord" href="/nlab/show/norm">norm</a>, i.e. such that there is a <a class="existingWikiWord" href="/nlab/show/positive+number">positive</a> <a class="existingWikiWord" href="/nlab/show/real+number">real number</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi><mo>&gt;</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">C\gt 0</annotation></semantics></math> such that</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mo stretchy="false">|</mo><mi>a</mi><mi>b</mi><mo stretchy="false">|</mo></mrow><mspace width="thickmathspace"></mspace><mo>≤</mo><mspace width="thickmathspace"></mspace><mi>C</mi><mrow><mo stretchy="false">|</mo><mi>a</mi><mo stretchy="false">|</mo></mrow><mrow><mo stretchy="false">|</mo><mi>b</mi><mo stretchy="false">|</mo></mrow></mrow><annotation encoding="application/x-tex">
  {\vert a b \vert} 
  \;\leq\; 
@@ -519,7 +519,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  2, 2018 at 09:53:04.
+  Last revised on December  2, 2018 at 10:01:54.
   See the <a href="https://ncatlab.org/nlab/history/normed algebra" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
